syntax = "proto3";
package fx.ibc.applications.transfer.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/pundiai/fx-core/x/ibc/middleware/types";

enum IbcCallType {
  option (gogoproto.goproto_enum_prefix) = false;

  IBC_CALL_TYPE_UNSPECIFIED = 0;
  IBC_CALL_TYPE_EVM = 1;
}

message IbcCallEvmPacket {
  string to = 1;
  string data = 2;
  string value = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}
